Archive2/1b/b8991786ca48b5/output
main.cpp:4:5: error: template declaration of 'int var'
 int var = t.a;
     ^
main.cpp: In function 'int main()':
main.cpp:20:37: error: 'var' was not declared in this scope
     std::cout << "var <T, t> = " << var<T, t> << std::endl; 
                                     ^
main.cpp:20:42: error: expected primary-expression before ',' token
     std::cout << "var <T, t> = " << var<T, t> << std::endl; 
                                          ^
main.cpp:20:47: error: expected primary-expression before '<<' token
     std::cout << "var <T, t> = " << var<T, t> << std::endl; 
                                               ^
main.cpp:22:42: error: expected primary-expression before ',' token
     std::cout <<"var <T, tt> = " << var<T, tt> << std::endl; 
                                          ^
main.cpp:22:48: error: expected primary-expression before '<<' token
     std::cout <<"var <T, tt> = " << var<T, tt> << std::endl; 
                                                ^
